Bug 93480 - LOOL: numbering and bullets on an unmodified document
Summary: LOOL: numbering and bullets on an unmodified document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-17 07:07 UTC by Mihai Varga
Modified: 2015-09-16 08:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mihai Varga 2015-08-17 07:07:31 UTC
If I toggle numbering/bullets on an unmodified document, instead of invalidating a small area of the document, the whole document is invalidated.
If the document is edited (text input, format change, etc), toggling bullets/numbering works as expected.

Steps to reproduce:
1. open a new document
2. place the cursor somewhere
3. click on the bullets/numbering button
Comment 1 Luke 2015-09-12 12:14:11 UTC
http://cgit.freedesktop.org/libreoffice/core/commit/?id=560e2ea8512be606c330cf8f858c67694f690a52

Should fix it. Is the commit bot down?
Comment 2 Jan Holesovsky 2015-09-14 09:15:39 UTC
Luke: Seems like it is down - or at least was :-)

Unfortunately this is not the entire fix, there is one more thing that still needs to be fixed, so cannot close the bug yet.

Thanks for watching closely!
Comment 3 Jan Holesovsky 2015-09-16 08:44:06 UTC
Actually the 2nd part of this was caused by bug 94237, we can close it now :-)