tdf#93480: Don't send an EMPTY Invalidate() on .uno:DefaultBullet.

When there was no modification to the document, and .uno:DefaultBullet was
sent, we have got an invalidtion of the entire document.

It seems that Invalidate() was not supposed to be called in the Validate()
call, and instead, we should rely on what the Validate() invalidates :-)

Change-Id: Ia65df90e4ff34078b59c1b2eb1ce1faac790b40d